--- a/public/upload.html
+++ b/public/upload.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Document</title>
+    <title>Generate Quiz</title>
 </head>
 <body>
     <h1>Upload Document to Generate Quiz</h1>
-    <form action="/generate_quiz" method="post" enctype="multipart/form-data">
-        <label for="document">Choose a document:</label>
-        <input type="file" id="document" name="document" required accept=".txt,.pdf,.docx,.md">
-        <br>
-        <label for="prompt">Enter the prompt:</label>
-        <textarea id="prompt" name="prompt" required></textarea>
-        <br>
+    <form action="http://127.0.0.1:5003/generate_quiz" method="post" enctype="multipart/form-data">
+        <label for="document">Document:</label>
+        <input type="file" id="document" name="document" accept=".txt,.pdf,.docx,.md" required>
+        <br><br>
+        <label for="prompt">Prompt:</label>
+        <textarea id="prompt" name="prompt" rows="4" cols="50" required></textarea>
+        <br><br>
         <button type="submit">Generate Quiz</button>
     </form>
-    {% if error %}
-        <p style="color:red;">{{ error }}</p>
-    {% endif %}
 </body>
 </html>
